<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miraj.blakittest.activity.EditInfoActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primaryLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/sexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sexGroup"
                android:layout_marginTop="10dp"
                android:text="@string/sex"/>

            <RadioGroup
                android:id="@+id/sexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bdateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLayout"
        android:layout_marginTop="10dp"
        android:background="@color/primaryLight">

        <TextView
            android:id="@+id/bdateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/birth_day"/>

        <Spinner
            android:id="@+id/bdateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bdateText"
            app:layout_constraintTop_toBottomOf="@id/bdateText"
            android:layout_marginTop="10dp">
        </Spinner>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/familyStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bdateLayout"
        android:layout_marginTop="10dp"
        android:background="@color/primaryLight">

        <TextView
            android:id="@+id/familyStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/family_status"/>

        <Spinner
            android:id="@+id/familyStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/familyStatusText"
            app:layout_constraintTop_toBottomOf="@id/familyStatusText"
            android:layout_marginTop="10dp">
        </Spinner>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
