<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.miraj.blakittest.fragment.EditInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar">

    <include layout="@layout/toolbar"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray">

        <ImageView
            android:id="@+id/photoImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/photoImage"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        
        <TextView
            android:id="@+id/sexText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/nameText"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/sex"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/sexText"
            app:layout_constraintBottom_toBottomOf="@id/sexText"
            app:layout_constraintLeft_toRightOf="@id/sexText"
            android:layout_marginStart="10dp">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:buttonTint="@color/primaryLight"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/male" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/primaryLight"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/female" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray">

        <TextView
            android:id="@+id/bdateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/bdateText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/birth_day"/>

        <TextView
            android:id="@+id/bdateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bdateTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            android:textSize="16sp">
        </TextView>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray">

        <TextView
            android:id="@+id/familyStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/familyStatusSpinner"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/family_status"/>

        <Spinner
            android:id="@+id/familyStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/familyStatusTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/black">
        </Spinner>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
